Add: search機能をviewに作成

--- a/config/locales/views/drummers.ja.yml
+++ b/config/locales/views/drummers.ja.yml
@@ -5,3 +5,6 @@ ja:
       describe: ドラマー一覧
     show:
       wikipedia: 'ウィキペディア (Wikipedia): フリー百科事典'
+    search:
+      title: Search
+      describe: ドラマー検索
