--- a/config/locales/views/drummers.ja.yml
+++ b/config/locales/views/drummers.ja.yml
@@ -4,6 +4,8 @@ ja:
       title: Drummers 
       describe: ドラマー一覧
     show:
+      title: Drummer
+      describe: プロフィール
       wikipedia: 'ウィキペディア (Wikipedia): フリー百科事典'
     search:
       title: Search
