Fix: ヘッダーの日本語i18n化

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -205,6 +205,8 @@ ja:
     search: 検索
     country: 出身国
     cancel: キャンセル
+    service: サービス
+    mypage: マイページ
     name_or_relative: ドラマーの名前や関連するアーティスト名を入力
     password_reset: パスワードリセット
     search_word: 検索ワード
