Add: commentフォームのパーシャル作成

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -213,6 +213,7 @@ ja:
     unspecified: 指定なし
     placeholder_tweet: 投稿内容を入力
     placeholder_drummer: おすすめドラマー名を入力
+    placeholder_comment: コメントを入力
     to_posts: 投稿する
     close: 閉じる
     clear: クリア
