Add: 投稿詳細画面にcommentフォームとcomment一覧のパーシャル追加とpostコントローラーに@comment追加

--- a/config/locales/activerecords/ja.yml
+++ b/config/locales/activerecords/ja.yml
@@ -4,6 +4,7 @@ ja:
       user: ユーザー 
       drummer: ドラマー
       post: みんなのおすすめ投稿
+      comment: コメント
       question: おすすめドラマー診断
       contact: お問合わせ
       recommended_drummer: おすすめドラマー
